--- a/lib/styles/style.css
+++ b/lib/styles/style.css
@@ -1,11 +1,14 @@
 body {
   position: absolute;
 }
+header {
+  position: fixed;
+}
 .mdl-list__item {
 
   transition: all 0.2s ease-in-out;
   border-bottom: 1px solid #eee;
-  padding: 22px !important;
+  padding: 12px !important;
 }
 .mdl-list__item:hover {
   cursor: pointer;
@@ -33,19 +36,33 @@ body {
     color:#434343;
     font-weight: 200;
       font-size: 0.99rem;
+      height: 24px;
 }
 .demo-list-radio {
   display: inline;
 }
 .demo-card-square {
-  width: 600px;
+  position: fixed !important;
+  width: 600px !important;
   left: 50%;
   margin-left: -300px;
   height: 300px;
   top: 20%;
-  position: absolute !important;
   z-index: 1002 !important;
 
+}
+.demo-card-square a 
+{
+    margin-right: 10px;
+    width: auto;
+    float: right;
+    text-align: center;
+    margin: 8px;
+    bottom: -8px;
+    vertical-align: middle;
+    padding: 0;
+    display: inline-block;
+    height: 40px;
 }
 .overlay {
   position: absolute;
@@ -62,7 +79,12 @@ body {
   bottom: 40px;
   right: 5%;
 }
+.mdl-card__title {
+    background: rgb(63,81,181);
+    color: aliceblue !important;
+}
 .mdl-list {
+  padding-top: 60px !important;
   margin: 0;
   padding:0;
 }
