--- a/lib/templates/app.jade
+++ b/lib/templates/app.jade
@@ -1,3 +1,7 @@
+header.mdl-layout__header
+	div.mdl-layout__header-row
+		span.mdl-layout-title SBIS3 Debugging Proxy
+		div.mdl-layout-spacer
 ul.demo-list-control.mdl-list
 div.btnWrapper
 	button(class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored")
