--- a/lib/templates/switcher.jade
+++ b/lib/templates/switcher.jade
@@ -1,1 +1,3 @@
-input(type="checkbox" id="list-switch-#{id}" class="mdl-switch__input")
+div.slideTwo
+	input(type="checkbox" value="None" id="list-switch-#{id} slideTwo" )
+	label(for="slideTwo")
