--- a/lib/styles/style.css
+++ b/lib/styles/style.css
@@ -3,12 +3,15 @@ body {
       background: #434352;
 
 }
-header {
-  position: fixed;
-  display: block !important;
- background: rgb(48, 48, 56) !important;
-      margin-top: -55px !important;
-box-shadow:         -1px 11px 16px 0px rgba(50, 50, 50, 0.32) !important;
+.mdl-layout-title {
+      margin-left: 72px;
+}
+div.mdl-layout__header {
+    position: fixed;
+    display: block !important;
+    background: rgb(85, 85, 103) !important;
+    top: 0;
+    box-shadow: -1px 11px 16px 0px rgba(50, 50, 50, 0.32) !important;
 }
 .mdl-list__item {
 
@@ -43,9 +46,9 @@ box-shadow:         -1px 11px 16px 0px rgba(50, 50, 50, 0.32) !important;
     text-overflow: ellipsis;
     word-wrap: break-word;
     color:#ccc;
-    font-weight: 200;
-      font-size: 0.99rem;
-      height: 24px;
+    font-weight: 400;
+      font-size: 1.09rem;
+
 }
 .demo-list-radio {
   display: inline;
@@ -105,4 +108,96 @@ box-shadow:         -1px 11px 16px 0px rgba(50, 50, 50, 0.32) !important;
 .mdl-layout-title {
       font-weight: 100;
     font-family: Noto Sans, Arial;
+}
+/* SLIDE TWO */
+.slideTwo {
+  width: 80px;
+  height: 30px;
+  background: #373746;
+  margin: 20px auto;
+
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  position: relative;
+
+  -webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+  -moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+  box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+}
+
+.slideTwo:after {
+  content: '';
+  position: absolute;
+  top: 14px;
+  left: 14px;
+  height: 2px;
+  width: 52px;
+
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  background: #656575;
+}
+
+.slideTwo label {
+  display: block;
+  width: 22px;
+  height: 22px;
+
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease;
+  transition: all .4s ease;
+  cursor: pointer;
+  position: absolute;
+  top: 4px;
+  z-index: 1;
+  left: 4px;
+
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+  background: #fcfff4;
+
+  background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
+}
+
+.slideTwo label:after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 10px;
+
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  background: #333;
+  left: 6px;
+  top: 6px;
+
+  -webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,1), 0px 1px 0px rgba(255,255,255,0.9);
+  -moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,1), 0px 1px 0px rgba(255,255,255,0.9);
+  box-shadow: inset 0px 1px 1px rgba(0,0,0,1), 0px 1px 0px rgba(255,255,255,0.9);
+}
+
+.slideTwo input[type=checkbox]:checked + label {
+  left: 54px;
+}
+
+.slideTwo input[type=checkbox]:checked + label:after {
+  background: #ff4081;
+}
+.slideTwo input {
+  display: none;
 }
