--- a/lib/templates/app.jade
+++ b/lib/templates/app.jade
@@ -1,4 +1,4 @@
-header.mdl-layout__header
+div.mdl-layout__header
 	div.mdl-layout__header-row
 		span.mdl-layout-title SBIS3 Debugging Proxy
 		span(style="float:right;right: 16px;position: absolute;") Debugging port: 8858
