--- a/lib/templates/app.jade
+++ b/lib/templates/app.jade
@@ -1,7 +1,7 @@
 div.mdl-layout__header
 	div.mdl-layout__header-row
 		span.mdl-layout-title SBIS3 Debugging Proxy
-		span(style="float:right;right: 16px;position: absolute;") Debugging port: 8858
+		span(style="float:right;right: 16px;position: absolute;") Debugging port: 8558 PID: #{process.pid}
 		div.mdl-layout-spacer
 ul.demo-list-control.mdl-list
 div.btnWrapper
